made statscore fully generic